Bug 1956314 - Align container line with tab background in vertical tabs. r=nsharpley,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D244559

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -1570,6 +1570,7 @@ tab-group {
   }
 
   .tab-background {
+    flex-direction: row-reverse;
     border-radius: var(--border-radius-medium);
     margin-inline: var(--tab-inner-inline-margin);
   }
